resolved issue with datepicker not working on mobile

--- a/src/components/Datepicker/datepicker.scss
+++ b/src/components/Datepicker/datepicker.scss
@@ -1,6 +1,11 @@
 
 @import '../_buttons/Button/button.scss';
 
+.datepicker-modal {
+  position: fixed;
+  background: none;
+}
+
 .datepicker {
   position: fixed;
 
